--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,28 @@
-/* Asterisk wildcard selector to override default styles added by the browser */
+/* Google Fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+/* Wildcard Selector */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+/* General Styles */
+body {
+    /*Generic font */
+    Color: 	#333333;
+    font-family: 'inter', sans-serif;
+}
+
+h1 {
+    /* Hero Image Font */
+    Color: 	#333333;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 650;
+    font-style: bold;
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
 
 /* Header */
