Restyle Footer after bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,6 @@ footer {
 }
 
 #social-networks > li {
-    font-size: 20px !important;
-    color: white !important;
+    font-size: 30px;
+    color: white;
     }
