--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
     margin: 0;
     box-sizing: border-box;
     /* Fix bug in font awesome format in the footer element */
-    text-decoration: inherit;
-    text-decoration-color: inherit;
+    text-decoration: none;
+    list-style: none;
     color: inherit;
 }
 
@@ -21,14 +21,13 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-
 }
 
 h1 {
     /* Hero Image Font */
     Color: #fafafa;
     font-family: 'Rubik', sans-serif;
-    font-weight: 650;
+    font-weight: 500;
     font-style: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -36,6 +35,11 @@ h1 {
 
 /* Header */
 header {
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 5;
+    width: 100%;
+    box-shadow: 0 1px 1px #334C54;
     background: rgb(34, 138, 255);
     background: linear-gradient(73deg, rgba(34, 138, 255, 1) 5%, rgba(58, 56, 217, 1) 98%);
 
@@ -44,6 +48,10 @@ header {
         background: linear-gradient(90deg, rgba(34, 138, 255, 1) 0%, rgba(58, 56, 217, 1) 26%, rgba(127, 20, 240, 1) 100%);
     }
 }
+
+/* header a {
+   
+} */
 
 /* Main Content */
 main {
@@ -64,6 +72,7 @@ footer {
 footer > p {
     font-size:10px;
     text-align: center;
+    font-weight: bold;
     padding-bottom: 0.5rem;
 }
 
@@ -74,13 +83,13 @@ footer > p {
     gap: 1rem;
 }
 
-
 #social-networks>li {
     font-size: 15px;
     color: #F6F4EA;
     list-style: none;
 }
 
+/* Social media hover icons */
 #social-networks a:hover {
     color: #fafafa;
     font-size: 105%;
