--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
     /*Generic font */
     Color: #fafafa;
     font-family: 'Inter', sans-serif;
-    font-size: 15px;
+    /* font-size: 8px; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -69,8 +69,8 @@ footer {
     padding: 5px;
 }
 
-footer > p {
-    font-size:10px;
+footer p {
+    font-size: 10px;
     text-align: center;
     font-weight: bold;
     padding-bottom: 0.5rem;
@@ -93,4 +93,14 @@ footer > p {
 #social-networks a:hover {
     color: #fafafa;
     font-size: 105%;
+}
+
+/* Media Querry for footer*/
+@media screen and (min-width: 768px) {
+    #social-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
 }
