--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ h1 {
 
 /* Header */
 header {
-    padding: 0 1rem;
+    padding: 0.5rem 0.5rem;
     position: fixed;
     z-index: 5;
     width: 100%;
@@ -84,7 +84,7 @@ footer p {
 }
 
 #social-networks>li {
-    font-size: 15px;
+    font-size: 12.5px;
     color: #F6F4EA;
     list-style: none;
 }
