--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 0.2em; 
+    padding-top: 0.2em;
     padding-right: 0.35em;
     position: fixed;
     z-index: 5;
@@ -37,11 +37,6 @@ header {
     box-shadow: 0 1px 1px #334C54;
     background: rgb(34, 138, 255);
     background: linear-gradient(73deg, rgba(34, 138, 255, 1) 5%, rgba(58, 56, 217, 1) 98%);
-
-    @media screen and (min-width: 768px) {
-        background: rgb(34, 138, 255);
-        background: linear-gradient(90deg, rgba(34, 138, 255, 1) 0%, rgba(58, 56, 217, 1) 26%, rgba(127, 20, 240, 1) 100%);
-    }
 }
 
 nav li {
@@ -56,16 +51,16 @@ nav li {
 
 nav li:hover {
     font-weight: 500;
-    }
+}
 
 .nav-selected {
     font-weight: 550;
-    color:#fafafa
+    color: #fafafa
 }
 
 nav {
-    position:absolute;
-    width:100%;
+    position: absolute;
+    width: 100%;
     padding: 0 2em;
     box-shadow: 0 1px 1px #334C54;
     background: inherit;
@@ -132,15 +127,47 @@ footer p {
     font-size: 105%;
 }
 
-/* Media Querry for footer*/
+/* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
+    /* Header */
+
+    header {
+        background: rgb(34, 138, 255);
+        background: linear-gradient(90deg, rgba(34, 138, 255, 1) 0%, rgba(58, 56, 217, 1) 26%, rgba(127, 20, 240, 1) 100%);
+    }
+
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu>li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    /* Media Querry for footer*/
+
     #social-container {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 15px;}
+        gap: 15px;
+    }
+
     footer p {
         font-size: 12.5px;
-        padding-bottom: 0;}
+        padding-bottom: 0;
     }
 }
