--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,10 +43,11 @@ nav li {
     Color: #F6F4EA;
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    margin-bottom: 0.3em;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .nav-selected {
@@ -57,7 +58,7 @@ nav li {
 nav {
     position: absolute;
     width: 100%;
-    padding: 0 2em;
+    padding: 0 3.5em;
     box-shadow: 0 1px 1px #334C54;
     background: inherit;
     display: none;
@@ -74,7 +75,7 @@ nav {
 }
 
 .nav-toggle-label {
-    font-size: 140%;
+    font-size: 250%;
 }
 
 header img {
@@ -86,7 +87,7 @@ main {
     background-color: #F6F4EA;
     /* Make the main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
-    margin-top: 47px;
+    margin-top: 58px;
     display: flex;
     flex-direction: column;
 }
@@ -98,10 +99,10 @@ footer {
 }
 
 footer p {
-    font-size: 10px;
+    font-size: 16px;
     text-align: center;
     font-weight: bold;
-    padding-bottom: 0.4em;
+    padding-bottom: 0.6em;
 }
 
 #social-networks {
@@ -112,7 +113,7 @@ footer p {
 }
 
 #social-networks>li {
-    font-size: 20px;
+    font-size: 30px;
     color: #F6F4EA;
     list-style: none;
 }
@@ -155,7 +156,7 @@ footer p {
 
     /* Main */
     main {
-        margin-top: 50px;
+        margin-top: 56px;
     }
 
     /* Footer */
@@ -167,7 +168,7 @@ footer p {
     }
 
     footer p {
-        font-size: 12.5px;
+        font-size: 16px;
         padding-bottom: 0;
     }
 }
@@ -176,7 +177,10 @@ footer p {
 @media screen and (min-width: 992px) {
 
     /* Header */
-    
+    nav li {
+        font-size: 14px;
+    }
+
     /* Nav hover icons */
     nav li:hover {
         font-weight: 500;
@@ -184,13 +188,13 @@ footer p {
 
     /* Footer */
     #social-networks>li {
-        font-size: 12.5px;
+        font-size: 16px;
         color: #F6F4EA;
         list-style: none;
     }
 
     footer p {
-        font-size: 10px;
+        font-size: 14px;
     }
 
     /* Social media hover icons */
