--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,11 +94,22 @@ main {
 }
 
 /* Hero Image */
-
 #hero {
     height: 665px;
     width: 100%;
     background: url("../images/hero_image.jpg") no-repeat center center/cover;
+}
+
+#cover-text {
+    background-color: rgba(169, 0, 177, .65);
+    font-size: 90%;
+    text-align: center;
+    position: absolute;
+    border-radius: 2px;
+    bottom: 30px;
+    width: 75%;
+    min-height: 90px;
+    padding: 0.5em 0.5em;
 }
 
 /* Footer */
@@ -168,6 +179,14 @@ footer p {
         margin-top: 53px;
     }
 
+    /* Hero Image */
+    #cover-text {
+        width: 185px;
+        top: 300px;
+        right: 50px;
+        bottom: 670px;
+    }
+
     /* Footer */
     #social-container {
         display: flex;
@@ -193,6 +212,14 @@ footer p {
     /* Main */
     main {
         margin-top: 48px;
+    }
+
+    /* Hero Image */
+    #cover-text {
+        width: 200px;
+        top: 300px;
+        right: 250px;
+        bottom: 350px;
     }
 
     /* Nav hover icons */
