--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,33 @@ footer p {
     list-style: none;
 }
 
+/* Polaroid Sectio */
+#polaroid-container {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+#polaroid img {
+    width: 85vw;
+    border-radius: 1em 1em 0 0;
+    height: auto;
+}
+
+#polaroid {
+    height: 85%;
+    width: 85%;
+    margin: 1em 1em;
+    background-color: #fafafa;
+    border-radius: 1em 1em;
+   }
+
+#caption {
+    padding: 10px 10px;
+    color: #1C3C44;
+    text-align: center;
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -215,6 +242,10 @@ footer p {
     }
 
     /* Hero Image */
+    #hero {
+        height: 690px;
+    }
+
     #cover-text {
         width: 200px;
         top: 300px;
