--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ footer p {
     list-style: none;
 }
 
-/* Polaroid Sectio */
+/* Polaroid Section */
 #polaroid-container {
 display: flex;
 flex-direction: column;
@@ -212,6 +212,11 @@ align-items: center;
         top: 300px;
         right: 50px;
         bottom: 670px;
+    }
+
+    /* Polaroid Section */
+    #caption {
+        font-size: 1.6em;
     }
 
     /* Footer */
