--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,34 @@ main {
     text-align: center;
 }
 
+/* About Section */
+#about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1C3C44;
+    margin: 1em 1em;
+    border-radius: 1em 1em;
+}
+
+#about-image {
+    padding: 1em 1em;
+    align-items: center;
+    width: 50vw;
+    height: auto;
+}
+
+#about-text-box {
+    height: 85%;
+    width: 85%;
+    padding: 0.3em  0.3em 1em;
+}
+
+#about-text {
+    padding: 2px 2px;
+    text-align: justify;
+}
+
 /* Footer */
 footer {
     background-color: #1C3C44;
