--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ main {
 /* Polaroid Section */
 .polaroid-container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
 }
@@ -132,6 +133,11 @@ main {
     margin: 1em 1em;
     background-color:#1C3C44;
     border-radius: 1em 1em;
+}
+
+.polaroid h2 {
+    text-align: center;
+    padding: 0.3em 0.3em;
 }
 
 .caption {
