--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,17 @@ main {
     padding: 0.3em 0.3em 0.5em
 }
 
+/* Gallery */
+
+/* Gallery Videos */
+#video-container {
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    }
+
+
 /* Footer */
 footer {
     background-color: #1C3C44;
