--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ main {
     height: 85%;
     width: 85%;
     margin: 1em 1em;
-    background-color:#1C3C44;
+    background-color: #1C3C44;
     border-radius: 1em 1em;
 }
 
@@ -177,7 +177,8 @@ main {
 
 /* Partners */
 #partners {
-    background:url("../images/rain-light-glass.jpg") no-repeat center center/cover;;
+    background: url("../images/rain-light-glass.jpg") no-repeat center center/cover;
+    ;
     border-radius: 1em 1em;
     padding: 1em 1em;
     margin: 1em 1em;
@@ -214,15 +215,46 @@ main {
 #video-container {
     margin: 1em;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
     gap: 1em;
-    }
+}
+
+.polaroid img {
+    width: 85vw;
+    border-radius: 1em 1em 0 0;
+    height: auto;
+}
+
+.video-frame {
+    height: auto;
+    width: 80vw;
+    margin: 1em 1em;
+    background-color: #1C3C44;
+    border-radius: 0.6em 0.6em;
+}
+
+.video-frame h2 {
+    text-align: center;
+    padding: 0.3em 0.3em;
+}
+
+.video-window {
+    aspect-ratio: 16/9;
+    width: 80vw;
+    border-radius: 0.6em 0.6em 0 0;
+}
 
 
 /* Footer */
 footer {
     background-color: #1C3C44;
+    width: 100%;
     padding: 5px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 footer p {
@@ -307,21 +339,21 @@ footer p {
         padding: 0.3em 0.3em 1em;
     }
 
-   .about-text {
+    .about-text {
         padding: 0.5em 0.5em;
         text-align: justify;
         font-size: 18px;
     }
 
     /* Partners */
-       
+
     .logo-image {
         align-items: center;
         width: 15vw;
         height: auto;
         border-radius: 50%;
     }
-    
+
     #partners h2 {
         text-align: center;
         text-transform: uppercase;
@@ -407,7 +439,7 @@ footer p {
 
     .polaroid:hover {
         transform: scale(1.02);
-        box-shadow: 0 6px 6px rgb(25,25,25,0.7);
+        box-shadow: 0 6px 6px rgb(25, 25, 25, 0.7);
     }
 
     .caption {
@@ -425,17 +457,17 @@ footer p {
     #about-image {
         width: 14vw;
     }
-    
+
     .about-text {
         size: 18px;
     }
 
-    /* Partners */  
+    /* Partners */
     #partners {
         border-radius: 0;
         margin: 0 0 0;
         flex-grow: 1;
-    }  
+    }
 
     .logo-image {
         align-items: center;
@@ -444,7 +476,7 @@ footer p {
         border-radius: 50%;
         transition: all 0.3s;
     }
-    
+
     #partners h2 {
         text-align: center;
         text-transform: uppercase;
@@ -452,12 +484,44 @@ footer p {
         size: 18px;
         padding: 0.3em 0.3em 0.5em
     }
-    
+
     .logo-image:hover {
         transform: scale(1.1);
-        box-shadow: 0 6px 6px rgba(25,25,25,0.7);
+        box-shadow: 0 6px 6px rgba(25, 25, 25, 0.7);
     }
-    
+
+    /* Gallery */
+    /* Gallery Videos */
+    #video-container {
+        margin: 1.2em 2em 1em;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 2em;
+    }
+
+    .video-frame {
+        height: auto;
+        width: 40vw;
+        margin: 1em 1em;
+        background-color: #1C3C44;
+        border-radius: 0.6em 0.6em;
+    }
+
+    .video-frame h2 {
+        font-size: 80%;
+        text-align: center;
+        padding: 0.3em 0.3em;
+    }
+
+    .video-window {
+        aspect-ratio: 16/9;
+        width: 40vw;
+        border-radius: 0.6em 0.6em 0 0;
+    }
+
     /* Nav hover icons */
     nav li:hover {
         transform: scale(1.05);
