--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,11 @@ main {
     border-radius: 0.6em 0.6em 0 0;
 }
 
+/* Contact */
+.form-single {
+    color:#161513
+}
+
 /* Footer */
 footer {
     background-color: #45496D;
