--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #161513;
+    background-color: rgba(60, 60, 60, 0.6);
     border-radius: 1em 1em;
     padding: 1em 1em;
     margin: 1em 1em;
@@ -239,8 +239,48 @@ main {
 }
 
 /* Contact */
+
+#form-container {
+    margin: auto 1em;
+    background-color: rgba(60, 60, 60, 0.6);
+    border-radius: 1em 1em;
+    padding: 1em 1em;
+    font-size: 105%;
+    gap: 0.3;
+    font-size: 1.3em
+}
+
+#form-container h3 {
+    padding: 0 0 0.3em;
+    text-align: center;
+}
+
 .form-single {
-    color:#161513
+    background-color: white;
+    color:#161513;
+    width: 100%;
+    height: 2em;
+    margin: 0.5em 0;
+    padding: 0.25em 0.5em;
+    border-radius: 0.5em;
+}
+
+.form-box {
+    background-color: white;
+    color:#161513;
+    width: 100%;
+    height: 12em;
+    margin: 0.5em 0;
+    border-radius: 0.5em;
+    padding: 0.25em 0.5em;
+    text-align: justify start;
+}
+
+.contact-button {
+    background-color: #45496d;
+    font-size: 0.7em;
+    padding: 0.5em;
+    border-radius: 0.5em;
 }
 
 /* Footer */
