Fix errors w3 html validator for gallery-urban.hmtl, gallery-solo.html, gallery-urban.html, gallery-weddings.html, and galllery-video.html, also fix manifest error on all pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,10 @@ main {
     border-radius: 0.6em 0.6em;
 }
 
+.video-frame iframe {
+    border: 0;
+}
+
 .video-frame h2 {
     text-align: center;
     padding: 0.3em 0.3em;
