--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ footer {
     justify-content: center;
 }
 
-footer p {
+footer span {
     font-size: 16px;
     text-align: center;
     font-weight: bold;
